--- a/src/components/templates/searchPredicateModal.html
+++ b/src/components/templates/searchPredicateModal.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col-md-4">
-      <predicate-view ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate"></predicate-view>
+      <property-predicate-view ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate"></property-predicate-view>
     </div>
 
   </div>
