--- a/src/components/templates/propertyView.html
+++ b/src/components/templates/propertyView.html
@@ -12,7 +12,7 @@
   <uib-accordion>
     <uib-accordion-group is-open="isOpen[property.predicate]">
       <uib-accordion-heading>{{property.predicate}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></uib-accordion-heading>
-      <predicate-view predicate="predicate" ng-if="isOpen[property.predicate]"></predicate-view>
+      <property-predicate-view predicate="predicate" ng-if="isOpen[property.predicate]"></property-predicate-view>
     </uib-accordion-group>
   </uib-accordion>
 </div>
