--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -1,6 +1,7 @@
 <editable-form on-submit="ctrl.updatePredicate()" on-reset="ctrl.resetModel()" ng-hide="ctrl.loading">
 
   <div class="top-actions" float="top-actions-placeholder" top-offset="8">
+    <button type="button" class="btn btn-default" ng-click="ctrl.deletePredicate()" ng-if="ctrl.canDeletePredicate()" translate>Delete predicate</button>
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
