--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -3,6 +3,7 @@
   <div class="top-actions" float="top-actions-placeholder" top-offset="8">
     <button type="button" class="btn btn-default" ng-click="ctrl.addProperty()" ng-if="ctrl.canAddProperty()" translate>Add property</button>
     <button type="button" class="btn btn-default" ng-click="ctrl.deleteClass()" ng-if="ctrl.canDeleteClass()" translate>Delete class</button>
+    <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit() && !formController.visible()" translate>Edit</button>
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
