--- a/src/components/templates/modelView.html
+++ b/src/components/templates/modelView.html
@@ -1,6 +1,7 @@
 <editable-form>
 
   <div class="top-actions">
+    <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit() && !formController.visible()" translate>Edit</button>
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
