--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -2,6 +2,7 @@
 
   <div class="top-actions" float="top-actions-placeholder" top-offset="8">
     <button type="button" class="btn btn-default" ng-click="ctrl.deletePredicate()" ng-if="ctrl.canDeletePredicate()" translate>Delete predicate</button>
+    <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit() && !formController.visible()" translate>Edit</button>
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
