--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -57,8 +57,8 @@
     </div>
 
     <div class="model-panel--right" window-height="min">
-      <class-view id="ctrl.selected.id" ng-if="ctrl.selected.type === 'class'"></class-view>
-      <predicate-view id="ctrl.selected.id" type="{{ctrl.selected.type}}" ng-if="ctrl.selected.type !== 'class'"></predicate-view>
+      <class-view id="ctrl.selected.id" ng-show="ctrl.selected.type === 'class'"></class-view>
+      <predicate-view id="ctrl.selected.id" type="{{ctrl.selected.type}}" ng-show="ctrl.selected.type !== 'class'"></predicate-view>
     </div>
   </div>
 
