--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -1,7 +1,7 @@
 <div ng-if="!ctrl.loading">
 
   <div class="top">
-    <model-view model="ctrl.model"></model-view>
+    <model-view model="ctrl.model['@graph'][0]"></model-view>
   </div>
 
   <div class="bottom">
