--- a/src/components/templates/predicateView.html
+++ b/src/components/templates/predicateView.html
@@ -7,14 +7,6 @@
       <show-submit-error></show-submit-error>
     </div>
 
-    <h2>
-      <form-input content="ctrl.predicate['@graph'][0].label"></form-input>
-    </h2>
-    <form-id title="{{'Id' | translate}}" plain-text="ctrl.predicate['@graph'][0]['@id']"></form-id>
-    <form-text-area title="{{'Comment' | translate}}" content="ctrl.predicate['@graph'][0].comment"></form-text-area>
-    <range-select ng-if="ctrl.predicate['@graph'][0]['@type'] === 'owl:DatatypeProperty'" content="ctrl.predicate['@graph'][0].datatype"></range-select>
-    <form-input ng-if="ctrl.predicate['@graph'][0]['@type'] === 'owl:ObjectProperty'"  title="{{'Value class' | translate}}" content="ctrl.predicate['@graph'][0].valueclass"></form-input>
-    <div class="model-view__title" translate>Is defined by</div>
-    <div>{{ctrl.predicate['@graph'][0].isDefinedBy}}</div>
+    <predicate-form predicate="ctrl.predicate['@graph'][0]"></predicate-form>
   </div>
 </editable-form>
