--- a/src/components/templates/searchPredicateModal.html
+++ b/src/components/templates/searchPredicateModal.html
@@ -1,73 +1,78 @@
-<div class="modal-header modal-header-confirm">
-  <h4 class="modal-title ng-binding">
-    <span translate>Search predicates</span>
-    <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
-  </h4>
-</div>
+<editable-form id="predicate-search-form" on-submit="ctrl.createAndUsePredicate()">
 
-<div class="modal-body search-modal">
-
-  <div class="top-actions">
-    <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-hide="!ctrl.typeSelectable && ctrl.type != 'owl:DatatypeProperty'">
-      <span class="glyphicon glyphicon-plus"></span>
-      {{'Create new attribute' | translate}}
-    </button>
-    <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-hide="!ctrl.typeSelectable && ctrl.type != 'owl:ObjectProperty'">
-      <span class="glyphicon glyphicon-plus"></span>
-      {{'Create new association' | translate}}
-    </button>
+  <div class="modal-header modal-header-confirm">
+    <h4 class="modal-title ng-binding">
+      <span translate>Search predicates</span>
+      <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
+    </h4>
   </div>
 
-  <p translate>Search predicate info</p>
+  <div class="modal-body search-modal">
 
-  <div class="row">
-
-    <div class="col-md-4">
-      <div class="input-group input-group-lg">
-        <input autofocus type="text" class="form-control" placeholder="{{'search predicate' | translate}}"
-               ng-model="ctrl.searchText"
-               ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
-        <i class="glyphicon glyphicon-search form-control-feedback"></i>
-      </div>
-
-      <div class="input-group input-group-lg">
-        <div class="selectContainer">
-          <select class="form-control" ng-model="ctrl.modelId">
-            <option value="" translate>All models</option>
-            <option ng-repeat="model in ctrl.models" value="{{model['@id']}}">{{model | translateLabel}}</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="input-group input-group-lg" ng-if="ctrl.typeSelectable">
-        <div class="selectContainer">
-          <select class="form-control" ng-model="ctrl.type">
-            <option value="" translate>All types</option>
-            <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
-          </select>
-        </div>
-      </div>
+    <div class="top-actions">
+      <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:DatatypeProperty')" ng-hide="!ctrl.typeSelectable && ctrl.type != 'owl:DatatypeProperty'">
+        <span class="glyphicon glyphicon-plus"></span>
+        {{'Create new attribute' | translate}}
+      </button>
+      <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNew('owl:ObjectProperty')" ng-hide="!ctrl.typeSelectable && ctrl.type != 'owl:ObjectProperty'">
+        <span class="glyphicon glyphicon-plus"></span>
+        {{'Create new association' | translate}}
+      </button>
     </div>
 
-    <div class="col-md-4 search-results" window-height padding="320">
-      <div ng-repeat="predicate in ctrl.searchResults() track by predicate['@id']">
+    <p translate>Search predicate info</p>
+
+    <div class="row">
+
+      <div class="col-md-4">
+        <div class="input-group input-group-lg">
+          <input autofocus type="text" class="form-control" placeholder="{{'search predicate' | translate}}"
+                 ng-model="ctrl.searchText"
+                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        </div>
+
+        <div class="input-group input-group-lg">
+          <div class="selectContainer">
+            <select class="form-control" ng-model="ctrl.modelId">
+              <option value="" translate>All models</option>
+              <option ng-repeat="model in ctrl.models" value="{{model['@id']}}">{{model | translateLabel}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="input-group input-group-lg" ng-if="ctrl.typeSelectable">
+          <div class="selectContainer">
+            <select class="form-control" ng-model="ctrl.type">
+              <option value="" translate>All types</option>
+              <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 search-results" window-height padding="320">
+        <div ng-repeat="predicate in ctrl.searchResults() track by predicate['@id']">
           <div ng-class="['search-result', {selected: ctrl.isSelected(predicate)}]" ng-click="ctrl.selectPredicate(predicate)">
             <i ng-class="ctrl.iconClass(predicate)"></i>
             <h5>{{predicate | translateLabel}}</h5>
             <p>{{predicate.comment | translateValue}}</p>
             <p>{{predicate.isDefinedBy | translateLabel}}</p>
           </div>
+        </div>
       </div>
-    </div>
 
-    <div class="col-md-4">
-      <property-predicate-view ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate"></property-predicate-view>
-    </div>
+      <div class="col-md-4">
+        <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate['@graph'][0]"></predicate-form>
+      </div>
 
+    </div>
   </div>
-</div>
 
-<div class="modal-footer">
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedPredicate" translate>Use predicate</button>
-</div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-default btn-lg" ng-show="!editableFormController.visible()" ng-click="ctrl.usePredicate()" ng-disabled="!ctrl.selectedPredicate" translate>Use predicate</button>
+    <button type="submit" class="btn btn-default btn-lg" ng-show="editableFormController.visible()" translate>Create and use predicate</button>
+  </div>
+
+</editable-form>
