Group js with html for easier access

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,7 @@
 @import './vendor/_bootswatch';
 @import './vendor/_typeaheadjs';
 @import './vendor/angular-xeditable-0.1.8/css/xeditable';
-@import './components/templates/model';
+@import 'components/model/model';
 
 [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
