Unify classView and predicateView as editorView

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -57,8 +57,7 @@
     </div>
 
     <div class="model-panel--right" window-height="min">
-      <class-view></class-view>
-      <predicate-view></predicate-view>
+      <editor-view></editor-view>
     </div>
   </div>
 
