--- a/src/components/model/searchPredicateModal.html
+++ b/src/components/model/searchPredicateModal.html
@@ -64,6 +64,7 @@
 
       <div class="col-md-4">
         <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate['@graph'][0]"></predicate-form>
+        <show-submit-error></show-submit-error>
       </div>
 
     </div>
