Show 'label' label when editing

--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -1,5 +1,5 @@
 <h2>
-  <form-input content="class.label"></form-input>
+  <form-input title-edit-only="true" title="{{'Label' | translate}}" content="class.label"></form-input>
 </h2>
 <form-id title="{{'Id' | translate}}" plain-text="class['@id']"></form-id>
 <form-text-area title="{{'Comment' | translate}}" content="class.comment"></form-text-area>
