--- a/src/components/model/model.scss
+++ b/src/components/model/model.scss
@@ -76,6 +76,10 @@ uib-accordion .panel-group {
   margin-top: 15px;
 }
 
+h2 .model-view__title {
+  font-weight: normal;
+}
+
 .modal-dialog {
   &.modal-large {
     width: 90%;
