--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-md-6">
       <h2>
-        <form-input content="ctrl.model.label"></form-input>
+        <form-input title-edit-only="true" title="{{'Label' | translate}}" content="ctrl.model.label"></form-input>
       </h2>
       <div class="model-view__title" translate>Id</div>
       <div>{{ctrl.model['@id']}}</div>
