--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -1,5 +1,5 @@
 <h2>
-  <form-input content="predicate.label"></form-input>
+  <form-input title-edit-only="true" title="{{'Label' | translate}}" content="predicate.label"></form-input>
 </h2>
 <form-id title="{{'Id' | translate}}" plain-text="predicate['@id']"></form-id>
 <form-text-area title="{{'Comment' | translate}}" content="predicate.comment"></form-text-area>
