--- a/src/components/form/formInput.html
+++ b/src/components/form/formInput.html
@@ -1,5 +1,5 @@
 <div ng-show="inputController.hasContent() || formController.visible()">
-  <div class="model-view__title">{{inputController.title}}</div>
+  <div ng-show="!inputController.titleEditOnly || formController.visible()" class="model-view__title">{{inputController.title}}</div>
   <div editable-text="inputController.plainText" ng-if="inputController.plainText">{{inputController.plainText}}</div>
   <div editable-text="inputController.content[inputController.getLanguage()]" ng-if="!inputController.plainText">{{inputController.content | translateValue}}</div>
 </div>
