--- a/src/components/model/selectionView.html
+++ b/src/components/model/selectionView.html
@@ -5,7 +5,7 @@
       <button type="button" class="btn btn-default" ng-click="ctrl.remove()" ng-if="ctrl.canRemove()">
         {{ctrl.selectionIsClass() ? 'Delete class' : 'Delete predicate' | translate}}
       </button>
-      <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit() && !formController.visible()" translate>Edit</button>
+      <button type="button" class="btn btn-default" ng-click="formController.show()" ng-show="ctrl.canEdit()" translate>Edit</button>
       <editable-form-buttons></editable-form-buttons>
       <show-submit-error></show-submit-error>
     </div>
