--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -28,10 +28,10 @@
             <i ng-class="ctrl.glyphIconClassForType('attribute')"></i><p>{{'Attributes' | translate}}</p>
           </uib-tab-heading>
 
-          <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('owl:DatatypeProperty')" translate>Add attribute</button>
+          <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('attribute')" translate>Add attribute</button>
 
           <ul class="panel__list" window-height padding="93" logged-in-padding="150">
-            <li ng-repeat="attribute in ctrl.attributes | orderByLabel"
+            <li ng-repeat="attribute in ctrl.attributes() | orderByLabel"
                 ng-class="{'model-panel__selection': ctrl.isSelected(attribute)}"
                 ng-click="ctrl.select(attribute)">
               {{attribute | translateLabel}}
@@ -43,10 +43,10 @@
             <i ng-class="ctrl.glyphIconClassForType('association')"></i><p>{{'Associations' | translate}}</p>
           </uib-tab-heading>
 
-          <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('owl:ObjectProperty')" translate>Add association</button>
+          <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('association')" translate>Add association</button>
 
           <ul class="panel__list" window-height padding="93" logged-in-padding="150">
-            <li ng-repeat="association in ctrl.associations | orderByLabel"
+            <li ng-repeat="association in ctrl.associations() | orderByLabel"
                 ng-class="{'model-panel__selection': ctrl.isSelected(association)}"
                 ng-click="ctrl.select(association)">
               {{association | translateLabel}}
