--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -1,22 +1,22 @@
 <h2>
   <form-input title-edit-only="true" title="{{'Label' | translate}}" content="class.label"></form-input>
 </h2>
-<form-id title="{{'Id' | translate}}" plain-text="class['@id']"></form-id>
+<form-id title="{{'Id' | translate}}" plain-text="class.idName"></form-id>
 <form-text-area title="{{'Comment' | translate}}" content="class.comment"></form-text-area>
 <div ng-show="class.subClassOf">
   <div class="model-view__title" translate>Superclass</div>
   <div>{{class.subClassOf}}</div>
 </div>
 <div class="model-view__title" translate>Is defined by</div>
-<div>{{class.isDefinedBy}}</div>
+<div>{{class.modelId}}</div>
 
 <uib-accordion close-others="true">
-  <uib-accordion-group ng-repeat="property in class.property" is-open="isOpen[property['@id']]">
+  <uib-accordion-group ng-repeat="property in class.properties" is-open="isOpen[property.id]">
     <uib-accordion-heading>
-      <span ng-class="resolvePropertyIconClass(property)"></span>
+      <span ng-class="property.glyphIconClass()"></span>
       {{property | translateLabel}}
-      <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property['@id']], 'glyphicon-chevron-right': !isOpen[property['@id']]}"></span>
+      <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.id], 'glyphicon-chevron-right': !isOpen[property.id]}"></span>
     </uib-accordion-heading>
-    <property-view property="property" context="context" ng-if="isOpen[property['@id']]"></property-view>
+    <property-view property="property" context="context" ng-if="isOpen[property.id]"></property-view>
   </uib-accordion-group>
 </uib-accordion>
