--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -10,16 +10,16 @@
   <div class="row">
     <div class="col-md-6">
       <h2>
-        <form-input title-edit-only="true" title="{{'Label' | translate}}" content="ctrl.modelInEdit['@graph'][0].label"></form-input>
+        <form-input title-edit-only="true" title="{{'Label' | translate}}" content="ctrl.modelInEdit.label"></form-input>
       </h2>
       <div class="model-view__title" translate>Id</div>
-      <div>{{ctrl.modelInEdit['@graph'][0]['@id']}}</div>
-      <form-text-area title="{{'Comment' | translate}}" content="ctrl.modelInEdit['@graph'][0].comment"></form-text-area>
+      <div>{{ctrl.modelInEdit.id}}</div>
+      <form-text-area title="{{'Comment' | translate}}" content="ctrl.modelInEdit.comment"></form-text-area>
     </div>
 
     <div class="col-md-6">
-      <references-view references="ctrl.modelInEdit['@graph'][0].references"></references-view>
-      <requires-view requires="ctrl.modelInEdit['@graph'][0].requires"></requires-view>
+      <references-view references="ctrl.modelInEdit.references"></references-view>
+      <requires-view requires="ctrl.modelInEdit.requires"></requires-view>
     </div>
   </div>
 
