--- a/src/components/model/propertyPredicateView.html
+++ b/src/components/model/propertyPredicateView.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="model-view__title" translate>Type</div>
-<div>{{predicate['@type']}}</div>
+<div>{{predicate.owlType}}</div>
 
 <div ng-show="predicate.range">
   <div class="model-view__title" translate>Range</div>
