--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -7,12 +7,12 @@
   <form-input title="{{'Name' | translate}}" content="property.label"></form-input>
   <form-text-area title="{{'Comment' | translate}}" content="property.comment"></form-text-area>
   <form-input title="{{'Example' | translate}}" content="property.example"></form-input>
-  <range-select content="property.datatype" ng-if="predicate['@type'] == 'owl:DatatypeProperty'"></range-select>
-  <form-input title="{{'Value class' | translate}}" plain-text="property.valuesClass" ng-if="predicate['@type'] == 'owl:ObjectProperty'"></form-input>
+  <range-select content="property.datatype" ng-if="predicate.isAttribute()"></range-select>
+  <form-input title="{{'Value class' | translate}}" plain-text="property.valuesClass" ng-if="predicate.isAssociation()"></form-input>
   <uib-accordion>
-    <uib-accordion-group is-open="isOpen[property.predicate]">
-      <uib-accordion-heading>{{property.predicate}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicate], 'glyphicon-chevron-right': !isOpen[property.predicate]}"></span></uib-accordion-heading>
-      <property-predicate-view predicate="predicate" ng-if="isOpen[property.predicate]"></property-predicate-view>
+    <uib-accordion-group is-open="isOpen[property.predicateId]">
+      <uib-accordion-heading>{{property.predicateId}} <span class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': isOpen[property.predicateId], 'glyphicon-chevron-right': !isOpen[property.predicateId]}"></span></uib-accordion-heading>
+      <property-predicate-view predicate="predicate" ng-if="isOpen[property.predicateId]"></property-predicate-view>
     </uib-accordion-group>
   </uib-accordion>
 </div>
