--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -1,17 +1,15 @@
 <h4 translate>Requires</h4>
 
 <uib-accordion>
-  <uib-accordion-group ng-repeat="require in ctrl.requires" is-open="isOpen[require['dcap:preferredXMLNamespaceName']]">
+  <uib-accordion-group ng-repeat="require in requires" is-open="isOpen[require.id]">
     <uib-accordion-heading>{{require.title | translateValue}}
       <span class="pull-right glyphicon"
-            ng-class="{'glyphicon-chevron-down': isOpen[require['dcap:preferredXMLNamespaceName']], 'glyphicon-chevron-right': !isOpen[require['dcap:preferredXMLNamespaceName']]}">
+            ng-class="{'glyphicon-chevron-down': isOpen[require.id], 'glyphicon-chevron-right': !isOpen[require.id]}">
       </span>
     </uib-accordion-heading>
-    <div class="model-view__title" translate>Type</div>
-    <div>{{require['@type']}}</div>
     <div class="model-view__title" translate>Preferred namespace</div>
-    <div>{{require['dcap:preferredXMLNamespaceName']}}</div>
+    <div>{{require.namespace}}</div>
     <div class="model-view__title" translate>Preferred prefix</div>
-    <div>{{require['dcap:preferredXMLNamespacePrefix']}}</div>
+    <div>{{require.prefix}}</div>
   </uib-accordion-group>
 </uib-accordion>
