--- a/src/components/model/searchConceptModal.html
+++ b/src/components/model/searchConceptModal.html
@@ -5,8 +5,18 @@
   </h4>
 </div>
 
-<div class="modal-body search-modal" ng-show="ctrl.hasVocabularies">
+<div class="modal-body search-modal" ng-show="ctrl.references.length > 0">
   <form name="conceptForm">
+
+    <label for="reference" translate>Reference</label>
+    <div class="input-group input-group-lg">
+      <div class="selectContainer">
+        <select id="reference" class="form-control" ng-model="ctrl.vocabularyId">
+          <option value="" translate>All references</option>
+          <option ng-repeat="reference in ctrl.references" value="{{reference.vocabularyId}}">{{reference.title | translateValue}}</option>
+        </select>
+      </div>
+    </div>
 
     <label for="concept" translate>Concept</label>
     <div class="input-group input-group-md">
@@ -22,11 +32,11 @@
   </form>
 </div>
 
-<div class="modal-body search-modal" ng-hide="ctrl.hasVocabularies">
+<div class="modal-body search-modal" ng-hide="ctrl.references.length > 0">
   <p translate>Concepts can't be searched because there are no vocabularies</p>
 </div>
 
 <div class="modal-footer">
   <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.hasVocabularies" ng-disabled="!conceptForm.$valid" translate>Create new</button>
+  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.references.length > 0" ng-disabled="!conceptForm.$valid" translate>Create new</button>
 </div>
